--- a/src/componentss/home/Home.module.css
+++ b/src/componentss/home/Home.module.css
@@ -8,3 +8,11 @@
     height: 100%;
     object-fit: cover;
 }
+
+
+.carousel{
+    height: 100vh;
+    width: 100%;
+    background-color: aqua;
+}
+
