--- a/src/componentss/contact/Contact.module.css
+++ b/src/componentss/contact/Contact.module.css
@@ -1,6 +1,7 @@
 .divider{
     width: 100%;
-    color: white;
+
+    background-color:rgba(59, 51, 51, 0.63);
     height: 1px;
 }
 .contact {
@@ -12,6 +13,7 @@
 
 .map {
     margin-top: 35px;
+    
     position: relative;
     width: 100%;
     padding-bottom: 100%; 
