--- a/src/componentss/header/Header.module.css
+++ b/src/componentss/header/Header.module.css
@@ -77,6 +77,9 @@ box-shadow: 0px 0px 20px #EEB75D;
     border: 2px solid white;
 }
 
+.icon:hover{
+    transform: scale(1.04);
+}
 
 @media (max-width: 768px){
     .container img{
