--- a/src/componentss/about/About.module.css
+++ b/src/componentss/about/About.module.css
@@ -1,5 +1,20 @@
 
 /* Features */
+.features1{
+    width: 100%;
+    display: flex;
+    min-height: 65vh;
+    align-items: center;
+}
+
+.features2{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    min-height:70vh ;
+}
+
+
 .about{
     min-height: 194vh;
     width: 100%;
@@ -32,9 +47,11 @@ padding: 7px 10px;
 }
 
 .price{
-    min-height: 450px;
+    min-height: 500px;
+    display: flex;
+    align-items: center;
     width: 100%;
-background-color: #D7B2AB;
+background-color:  rgb(210, 190, 187);
     color:#2A2114 ;
 }
 
@@ -50,6 +67,25 @@ background-color: #D7B2AB;
 .tablefont{
     font-size: 18px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 768px){
