--- a/src/componentss/overview/Overview.module.css
+++ b/src/componentss/overview/Overview.module.css
@@ -51,15 +51,20 @@
 .localities img{
   margin-top: 20px;
   color: aliceblue;
-  height: 75px;
+  height: 80px;
   width: 85px;
 }
 
 .skill{
   box-shadow: 0px 0px 8px gold;
-  margin-top: 25px;
-  width: 250px;
-  max-height: 135px;
+  margin: 25px auto;
+  border-right: 1px solid #ffd70069;
+  min-width: 250px; 
+  max-height: 145px; 
+}
+
+.skill:last-child {
+  border-right: none;
 }
 
 .skill:hover{
@@ -71,7 +76,7 @@
   font-weight: 600;
   font-size: 1.1rem;
 }
-  /* Responsive styles */
+  
   @media (max-width: 768px) {
     .view p {
       font-size: 14px;
@@ -86,7 +91,7 @@
       height: 50px;
     }
     .skill{
-      width: 140px;
+      width: 70px;
     }
 
     .localities p{
